--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_projet_final_connexion
+spring.datasource.url=jdbc:mysql://database-mysql-projet-final.c1nivjjrsplp.eu-west-3.rds.amazonaws.com:3306/dbMysqlSpringProjetFinal
 spring.datasource.username=laetitia
 spring.datasource.password=laetitia
 spring.jpa.hibernate.ddl-auto=create
